## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2003-2008 Bayes Inference, SA
## Written by Daniel Rus Morales <daniel@uponeits.com>
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.

EXTRA_DIST = win_findexe.c Jamfile

noinst_LTLIBRARIES = libbasic.la

pkginclude_HEADERS = tol_bcore.h tol_batom.h tol_btext.h tol_bobject.h tol_butil.h tol_bdate.h tol_bdir.h tol_blist.h tol_list.h tol_tree.h tol_bopt.h tol_bout.h tol_bseed.h tol_bsys.h tol_btimer.h tol_barray.h tol_bqfile.h tol_bexc.h tol_bfsmem.h tol_memhandler.h tol_hash_map.h tol_classify.h

libbasic_la_SOURCES = cor.cpp atm.cpp txt.cpp txtalgeb.cpp bobject.cpp dte.cpp dtealgeb.cpp dir.cpp dircomma.cpp dirtext.cpp lst.cpp lstalgeb.cpp lsttext.cpp list.cpp tree.cpp opt.cpp optargtx.cpp opttext.cpp out.cpp seed.cpp sys.cpp timer.cpp qfile.cpp bfsmem.cpp unix_findexe.c classify.cpp

