if( ODBC_FOUND )
  add_library( tolodbc0 SHARED libtolodbc.c )
  set_target_properties( tolodbc PROPERTIES PREFIX "" )
  target_include_directories( tolodbc PRIVATE ${ODBC_INCLUDE_DIR} )
  target_link_libraries( tolodbc ${ODBC_LIBRARIES} )
  install( TARGETS tolodbc RUNTIME DESTINATION bin LIBRARY DESTINATION bin )
endif( )

if( MYSQL_FOUND )
  add_library( tolmysql0 SHARED libtolmysql.c )
  set_target_properties( tolmysql PROPERTIES PREFIX "" )
  target_include_directories( tolmysql PRIVATE ${MYSQL_INCLUDE_DIRECTORIES} )
  target_link_libraries( tolmysql ${MYSQL_LIBRARY} )
  install( TARGETS tolmysql RUNTIME DESTINATION bin LIBRARY DESTINATION bin )
endif( )

if( PostgreSQL_FOUND )
  add_library( tolpgsql0 SHARED libtolpgsql.c )
  set_target_properties( tolpgsql PROPERTIES PREFIX "" )
  target_include_directories( tolpgsql PRIVATE ${PostgreSQL_INCLUDE_DIRS} )
  target_link_libraries( tolpgsql ${PostgreSQL_LIBRARY} )
  install( TARGETS tolpgsql RUNTIME DESTINATION bin LIBRARY DESTINATION bin )
endif( )

