if( ODBC_FOUND )
  add_library( tolodbc0 SHARED libtolodbc.c )
  set_target_properties( tolodbc0 PROPERTIES PREFIX "" )
  target_include_directories( tolodbc0 PRIVATE ${ODBC_INCLUDE_DIR} )
  target_link_libraries( tolodbc0 ${ODBC_LIBRARIES} )
  install( TARGETS tolodbc0 RUNTIME DESTINATION bin LIBRARY DESTINATION lib )
endif( )

if( MYSQL_FOUND )
  add_library( tolmysql0 SHARED libtolmysql.c )
  set_target_properties( tolmysql0 PROPERTIES PREFIX "" )
  target_include_directories( tolmysql0 PRIVATE ${MYSQL_INCLUDE_DIRECTORIES} )
  target_link_libraries( tolmysql0 ${MYSQL_LIBRARY} )
  install( TARGETS tolmysql0 RUNTIME DESTINATION bin LIBRARY DESTINATION lib )
endif( )

if( PostgreSQL_FOUND )
  add_library( tolpgsql0 SHARED libtolpgsql.c )
  set_target_properties( tolpgsql0 PROPERTIES PREFIX "" )
  target_include_directories( tolpgsql0 PRIVATE ${PostgreSQL_INCLUDE_DIRS} )
  target_link_libraries( tolpgsql0 ${PostgreSQL_LIBRARY} )
  install( TARGETS tolpgsql0 RUNTIME DESTINATION bin LIBRARY DESTINATION lib )
endif( )

